jilles      2006/08/17 15:24:10 UTC	(20060817-6089)
  Log:
  Get rid of debug message when dictionary_retrieve()
  cannot find an entry (happens often in normal operation).
  

  Changes:	Modified:
  +0 -4		trunk/src/dictionary.c (File Modified) 


jilles      2006/08/17 00:37:36 UTC	(20060817-6087)
  Log:
  atheme.c: #include "pmodule.h" for pcommand_init()
  

  Changes:	Modified:
  +1 -0		trunk/src/atheme.c (File Modified) 


jilles      2006/08/16 17:46:26 UTC	(20060816-6085)
  Log:
  - Make add_one_to_uid() static
  - Move declaration of struct set_command_ to modules/chanserv/set.c
  - Move help stuff to include/commandtree.h
  

  Changes:	Modified:
  +0 -19	trunk/include/atheme.h (File Modified) 
  +19 -0	trunk/include/commandtree.h (File Modified) 
  +0 -10	trunk/include/extern.h (File Modified) 
  +11 -3	trunk/modules/chanserv/set.c (File Modified) 
  +8 -7		trunk/src/uid.c (File Modified) 


jilles      2006/08/16 17:19:54 UTC	(20060816-6083)
  Log:
  Update depend files.
  

  Changes:	Modified:
  +3 -3		trunk/backend/.depend (File Modified) 
  +43 -43	trunk/contrib/.depend (File Modified) 
  +6 -6		trunk/crypto/.depend (File Modified) 
  +93 -93	trunk/modules/chanserv/.depend (File Modified) 
  +4 -4		trunk/modules/global/.depend (File Modified) 
  +24 -24	trunk/modules/memoserv/.depend (File Modified) 
  +66 -66	trunk/modules/nickserv/.depend (File Modified) 
  +62 -62	trunk/modules/operserv/.depend (File Modified) 
  +15 -15	trunk/modules/saslserv/.depend (File Modified) 
  +63 -63	trunk/modules/userserv/.depend (File Modified) 
  +12 -12	trunk/modules/xmlrpc/.depend (File Modified) 
  +95 -93	trunk/protocol/.depend (File Modified) 
  +116 -113	trunk/src/.depend (File Modified) 


jilles      2006/08/16 17:07:03 UTC	(20060816-6081)
  Log:
  - Move definition of authservice_loaded from pmodule.c
    to services.c
  - Remove obsolete initialize_services() declaration
  - Move reintroduce_user() and services_init() declarations